# agent-lens

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MILESTONES.md  Makefile  README.md  docker-compose.yml  executor_test.txt  pyproject.toml  pytest_output.txt  test_output.txt  test_results.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml
agents/: README.md
config/: prometheus.yml
dashboards/: README.md
docs/: API.md  CONFIGURATION.md  README.md
scripts/: README.md
services/codebase-index/: README.md
services/dashboard/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
services/dashboard/src/: App.css  App.tsx  index.css
services/dashboard/src/components/: AgentMetricsCard.css  AgentMetricsCard.tsx  AgentTimeline.css  AgentTimeline.tsx  CodeTabs.css  CodeTabs.tsx  EventStream.css  EventStream.tsx  FileTree.css  FileTree.tsx  GpuGauge.css  GpuGauge.tsx  Header.css  Header.tsx  PreviewPanel.css  PreviewPanel.tsx  TaskInput.css  TaskInput.tsx  TemperatureIndicator.css  TemperatureIndicator.tsx  TokenSparkline.css  TokenSparkline.tsx  VramDistributionBar.css  VramDistributionBar.tsx
services/dashboard/src/hooks/: useGpuMetrics.ts  (+1 more)
services/inference/: Dockerfile  Dockerfile.cpu  README.md  requirements.txt
services/inference/src/: config.py  main.py
services/metrics/: Dockerfile  Dockerfile.gpu  README.md
services/metrics/src/: gpu.py  main.py
services/orchestrator/: Dockerfile  README.md  requirements.txt
services/orchestrator/src/: __init__.py  errors.py  events.py  graph.py  inference_client.py  main.py  state.py  telemetry.py  tools.py
services/orchestrator/tests/: conftest.py  test_errors.py  test_inference_client.py  test_tools.py
tests/: __init__.py  conftest.py  test_error_recovery.py  test_gpu_metrics.py  test_inference_health.py  test_integration.py  test_m4_completion.py  test_metrics_gpu.py  test_orchestrator.py
(+7 files in other folders)
